downloaded the images locally

--- a/webfun/04-githubblocks/index.html
+++ b/webfun/04-githubblocks/index.html
@@ -13,18 +13,18 @@
             <h1>Github Blocks</h1>
         </header>
         <div class="row blue">
-            <img src="https://octodex.github.com/images/inflatocat.png" alt=" an img from octodex" >
-            <img src="https://octodex.github.com/images/mona-the-rivetertocat.png" alt=" an img from octodex" >
-            <img src="https://octodex.github.com/images/filmtocats.png" alt=" an img from octodex" >
+            <img src="images/inflatocat.png" alt=" an img from octodex" >
+            <img src="images/mona-the-rivetertocat.png" alt=" an img from octodex" >
+            <img src="images/filmtocats.png" alt=" an img from octodex" >
         </div>
         <div class="row pink">
-            <img src="https://octodex.github.com/images/snowtocat_final.jpg" alt=" an img from octodex" >
-            <img src="https://octodex.github.com/images/mona-lovelace.jpg" alt=" an img from octodex" >
+            <img src="images/snowtocat_final.jpg" alt=" an img from octodex" >
+            <img src="images/mona-lovelace.jpg" alt=" an img from octodex" >
         </div>
         <div class="row white">
-            <img src="https://octodex.github.com/images/gracehoppertocat.jpg" alt=" an img from octodex" >
-            <img src="https://octodex.github.com/images/kimonotocat.png" alt=" an img from octodex" >
-            <img src="https://octodex.github.com/images/momtocat.png" alt=" an img from octodex" >
+            <img src="images/gracehoppertocat.jpg" alt=" an img from octodex" >
+            <img src="images/kimonotocat.png" alt=" an img from octodex" >
+            <img src="images/momtocat.png" alt=" an img from octodex" >
         </div>
         <footer>
             <p>Images from <a href="https://octodex.github.com/">Github Octodex</a></p>
