code reformat and validation

--- a/webfun/07-user-card/index.html
+++ b/webfun/07-user-card/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
     <meta charset="utf-8">
@@ -14,17 +14,17 @@
 <body>
     <div class="container">
         <header>
-            <img class="profile" src="icons/user-circle.png" alt="user profile">
+            <img class="profile" src="icons/user-circle.png" alt="user icon">
         </header>
         <section id="about">
             <h1>Jane Doe</h1>
 
-            <img class="small" src="icons/map-marker.png"><span>Seattle,WA</span>
+            <img class="small" src="icons/map-marker.png" alt="map icon"><span>Seattle,WA</span>
 
             <p>Developer | Engineer | Problem Solver<br>
                 Master of shadows and the Internet!</p>
 
-            <a href="#"><img class="small" src="icons/gear.png">Edit my Profile</a>
+            <a href="#"><img class="small" src="icons/gear.png" alt="gear icon">Edit my Profile</a>
         </section>
 
     </div>
