did some visual edits

--- a/webfun/08-layout-page/index.html
+++ b/webfun/08-layout-page/index.html
@@ -35,7 +35,7 @@
 
                     <div class="item">
                         <img src="icons/map-marker.png" alt="map icon" class="icons">
-                        <p>Seattle, WA</p>
+                        <span>Seattle, WA</span>
                     </div>
 
                     <p>Developer | Engineer | Problem Solver<br>
